[tool.poetry]
name = "arxiv-api"
version = "0.1.0"
description = ""
authors = ["Hiroo Takizawa <kei.cataract@gmail.com>"]
readme = "README.md"
packages = [{include = "arxiv_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
